--- a/README.org
+++ b/README.org
@@ -1,12 +1,20 @@
 * How to use this repository
-1. Fork it to your personal GitHub account
-2. Check out your fork
-3. Make your fork private and add me (JoeOsborn) as a collaborator
-4. Do all your work in the work branch 
-5. Commit changes and push to your fork
+1. Make a new private repository in your personal GitHub account.
+2. Once it's created, use the "import from existing repository" feature and use the URL of this repository (=git@github.com:JoeOsborn/cs151-hw1.git=) as the base.
+3. Make your repository private and add me (JoeOsborn) as a collaborator/owner (so I can add peer review students later).
+4. Check out your copy on your computer and do your work in =master=.
+5. Commit changes and push to your repository.
+
+* If the assignment base repository is ever updated
+1. (Do this if you haven't yet:) =git remote add upstream git@github.com:JoeOsborn/cs151-hw1.git=
+2. =git checkout base=
+3. =git pull upstream base=
+4. =git checkout master=
+5. =git pull upstream master=
+6. Resolve any merge issues and make a merge commit.
 
 * When you are ready to submit homework
-1. Open a pull request against your own master branch.  This way your work can stay hidden from other students except those with permission to see it.
+1. Open a pull request against your own =base= branch.
 2. Submit to Sakai:
   - The link to the pull request
   - The hash of the latest commit in the PR
